# wechat-uos-platform

./: .gitignore  Dockerfile  README.md  adapter.py  bot.py  cftc.py  config.example.yaml  config.yaml  docker-compose.yml  handlers.py  install.sh  lsposed.py  main.py  pyproject.toml  requirements.txt  tg_forward.py
gateway/: run.py
scripts/: config.example.json  pansou_bot.py  tg_channel_to_wechat.py  tg_fwd_daemon.sh
standalone/: .gitignore  README.md  config.example.yaml  docker-compose.yml  main.py  requirements.txt
tests/gateway/: test_pansou_bot_script.py  test_wechat_uos_acl.py
tools/: send_message_tool.py
wechat_uos/: adapter.py
