[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-uos-platform"
version = "0.1.0"
description = "Hermes Agent WeChat UOS personal-account platform plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "itchat-uos",
  "Pillow",
]
license = {text = "MIT"}
authors = [
  {name = "Hermes Agent"}
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["wechat_uos*"]
